# aimer-web

./: .dockerignore  .env.docker.example  .env.example  .env.letsencrypt.example  .env.local.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Trunk.toml  biome.json  build.sh  build.sh.bak  components.json  docker-compose.https.yml  docker-compose.yml  index.html  leptosfmt.toml  mkdocs.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vitest.config.ts  vitest.int.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  ci.yml  docs.yml  e2e-nightly.yml  update-skills.yml
__mocks__/: next-intl.ts
__mocks__/next/: navigation.ts
__mocks__/next-intl/: server.ts
__tests__/: admin.test.tsx  graphql-proxy.test.tsx  i18n.client.test.tsx  i18n.routes.test.tsx  i18n.server.test.tsx  page.test.tsx  setup.int.ts  signin.int.test.ts  signin.test.tsx  user.test.tsx  utils.test.tsx
apps/admin/: Cargo.toml  index.html
apps/aimer/: Cargo.toml  index.html
apps/home/: Cargo.toml  index.html
csr/admin/: Cargo.toml  index.html
csr/home/: Cargo.toml  index.html
csr/user/: Cargo.toml  index.html
docker/nginx/: default-ssl.conf  default.conf
docs/: AUTHORING.md  PHASE0-ACCEPTANCE.md  SCHEMAS.md
docs/en/: account-anomalies.md  account-management.md  account-preferences.md  admin-designation.md  analysis-result.md  analyst-management.md  audit-logs.md  authentication.md  backup-restore.md  configuration.md  cross-customer-overview.md  cross-system-customer-identification.md  customer-management.md  cve-refresh.md  environment-management.md  getting-started.md  group-settings.md  index.md  members.md  navigation.md  threat-feeds.md  usage.md
docs/ko/: account-anomalies.md  account-management.md  account-preferences.md  admin-designation.md  analysis-result.md  analyst-management.md  audit-logs.md  authentication.md  backup-restore.md  configuration.md  cross-customer-overview.md  cross-system-customer-identification.md  customer-management.md  cve-refresh.md  environment-management.md  index.md  (+6 more)
e2e/: account-preferences.spec.ts  admin-accounts-api.spec.ts  admin-accounts-suspend.spec.ts  admin-admins-revoke.spec.ts  admin-analysts-designation.spec.ts  admin-audit-logs-api.spec.ts  admin-audit-logs-auth.spec.ts  admin-audit-logs-ui.spec.ts  admin-customers-api.spec.ts  admin-customers-list-api.spec.ts  admin-customers-ui.spec.ts  admin-deny-page.spec.ts  admin-detection-alerts-api.spec.ts  admin-detection-alerts-auth.spec.ts  admin-detection-analyze-api.spec.ts  admin-detection-ui.spec.ts  admin-environments-ui.spec.ts  auth-smoke.spec.ts  authorization-api.spec.ts  bridge-api.spec.ts  bridge-deny-page.spec.ts  capture-manual-screenshots.spec.ts  capture.config.ts  customer-lifecycle-api.spec.ts  dashboard-layout.spec.ts  deny-page.spec.ts  ingestion-auth.spec.ts  invitation-api.spec.ts  invitation-management-api.spec.ts  invite-entry.spec.ts  kek-rotation-api.spec.ts  members-api.spec.ts  members-ui.spec.ts  permissions-api.spec.ts  playwright.config.ts  roles-api.spec.ts  session-policy-api.spec.ts  smoke.spec.ts  staged-events-api.spec.ts  staged-events-flow.spec.ts
messages/: en.json  ko.json
migrations/: README.md
rfcs/: 0001-ai-analysis-storage.md  0002-periodic-llm-analysis.md  0003-external-ti-enrichment.md  0004-summary-subjects-and-report-navigation.md  0005-cve-vulnerability-enrichment.md
schemas/: aimer.graphql  aimer.version  cve-fixture.json  cve-fixture.version  mitre-attack-techniques.json
scripts/: build-docs-pdf.sh  graphql-codegen.ts  mitre-attack-vendor.ts  verify-story-event-time.sql
shared/: Cargo.toml  build.rs  input.css  package.json  tailwind.config.js
shared/src/: lib.rs  navbar.rs
shared/src/admin/: app.rs
shared/src/home/: app.rs
shared/src/user/: app.rs
shared/static/: output.css
src/: admin.rs  global.d.ts  home.rs  i18n.ts  instrumentation.ts  lib.rs  main.rs  middleware.ts  proxy.ts  user.rs
ssr/admin/: Cargo.toml
ssr/admin/src/: lib.rs  main.rs
(+1208 files in other folders)
