[workspace]
members = [
    "csr/admin",
    "csr/home",
    "csr/user",
    "ssr/admin",
    "ssr/home",
    "ssr/user",
    "shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
