[package]
name = "admin-ssr"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.8", default-features = false, features = ["hydrate"] }
leptos_meta = "0.8"
leptos_router = "0.8"
shared = { path = "../../shared" }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = "warn"
